--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/db.js", "src/app/problems/page.jsx", "src/app/api/problems/[id]/route.ts", "src/app/api/submissions/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/db.js", "src/app/problems/page.jsx", "src/app/api/problems/[id]/route.ts", "src/app/api/submissions/route.js", "src/lib/utils.js"],
   "exclude": ["node_modules"]
 }
